[gd_scene load_steps=7 format=3 uid="uid://ek4gg5yis34o"]

[ext_resource type="Texture2D" uid="uid://umpjx471p2yx" path="res://icon.svg" id="1_3kch8"]
[ext_resource type="Script" path="res://enemy_spawner.gd" id="1_uvjdf"]
[ext_resource type="PackedScene" uid="uid://he3ebchhsb75" path="res://enemy_agent.tscn" id="2_cpl1i"]
[ext_resource type="Texture2D" uid="uid://c00xr0vjfm68j" path="res://assets/base.png" id="4_jd7rv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tdqq8"]
size = Vector2(122, 96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x8uea"]
size = Vector2(132, 116)

[node name="EnemySpawner" type="StaticBody2D"]
collision_layer = 2
script = ExtResource("1_uvjdf")
enemy = ExtResource("2_cpl1i")

[node name="Icon" type="Sprite2D" parent="."]
visible = false
modulate = Color(0, 0.145098, 1, 1)
texture = ExtResource("1_3kch8")

[node name="SpawnCooldown" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="DetectionTimer" type="Timer" parent="."]
one_shot = true

[node name="Base" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("4_jd7rv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 10)
shape = SubResource("RectangleShape2D_tdqq8")

[node name="BaseHitbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="BaseHitbox"]
shape = SubResource("RectangleShape2D_x8uea")

[connection signal="timeout" from="SpawnCooldown" to="." method="_on_spawn_cooldown_timeout"]
[connection signal="timeout" from="DetectionTimer" to="." method="_on_detection_timer_timeout"]
[connection signal="body_entered" from="BaseHitbox" to="." method="_on_base_hitbox_body_entered"]
